Resolved theme switcher bug & changed Ids of the input fields in the contact form

--- a/assets/css/404.css
+++ b/assets/css/404.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato|Russo+One");
 *,
 *:after,
-*:/*before {
+*/*before {
   box-sizing: border-box;
 }*/
 body {
