--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,7 +252,7 @@ p {
   height: 2em;
   width: 2em;
   color: white;
-  margin-top: -3.5em;
+  margin-top: -3.6em;
   margin-left: -6.5em;
 }
 
@@ -356,7 +356,8 @@ html.transition *:after {
   margin-top: 4px;
 }
 
-.contact-form #exampleInputEmail1 {
+.contact-form #name,
+#email {
   background-color: #fff;
   padding: 0.375rem 0.75rem;
   height: 2rem;
